K8s/clock-it.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clock-it
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clock-it
  template:
    metadata:
      labels:
        app: clock-it
    spec:
      containers:
      - name: clockit-app
        image: timesheet-app
        imagePullPolicy: Never
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: clock-it-service
spec:
  selector:
    app: clock-it
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
