K8s/kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
      - name: kafka
        image: apache/kafka:latest
        resources:
          limits:
            memory: "1Gi"
            cpu: "1000m"
        ports:
        - containerPort: 9092
        - containerPort: 9094
        volumeMounts:
        - name: kafka-data
          mountPath: /tmp/kafka-logs
      volumes:
      - name: kafka-data
        persistentVolumeClaim:
          claimName: kafka-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
spec:
  selector:
    app: kafka
  type: NodePort
  ports:
  - name: internal
    protocol: TCP
    port: 9092
    targetPort: 9092
  - name: external
    protocol: TCP
    port: 9094
    targetPort: 9094
    nodePort: 30094
